Initial master Fixes

--- a/style.css
+++ b/style.css
@@ -2,14 +2,13 @@
   --bgDark: rgb(15, 15, 15);
   --secondary: rgb(39, 39, 39);
 }
-@import url("https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap");
 
 body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   background-color: var(--bgDark);
-  font-family: "Oleo Script", cursive;
+  overflow-x: hidden;
 }
 
 .masterContainer {
@@ -47,26 +46,25 @@ body {
 }
 
 #toggler1 {
-  grid-area: 1 / 1;
+  position: absolute;
+  top: 0%;
   box-sizing: border-box;
   text-decoration: none;
-  justify-self: flex-end;
   justify-content: center;
   align-items: center;
   font-weight: 800;
-  font-size: 3rem;
   display: flex;
   color: white;
   border-radius: 50%;
-  height: 150px;
-  width: 150px;
+  height: 50px;
+  width: 50px;
   background-color: var(--secondary);
   margin: 1rem;
   z-index: 1;
 }
 
 #toggler1:hover {
-  border: 12px solid white;
+  border: 1px solid white;
   transition: all 0.3s ease 0s;
 }
 
@@ -76,7 +74,7 @@ body {
 }
 
 #slider1 {
-  width: 50vw;
+width: 50vw;
 }
 
 .controller {
@@ -102,220 +100,212 @@ body {
 
 .container2 .textParty {
   -webkit-animation: heartbeat 1.5s linear infinite both;
-  animation: heartbeat 1.5s linear infinite both;
+        animation: heartbeat 1.5s linear infinite both;
 }
 
 .container3 .textParty {
   -webkit-animation: jello-vertical 0.9s infinite both;
-  animation: jello-vertical 0.9s infinite both;
+        animation: jello-vertical 0.9s infinite both;
 }
 
 .textParty + .textParty {
-  margin-left: 1.3rem;
+  margin-left: 1.3rem;   
 }
 
 .textParty {
   -moz-user-select: none;
-  -khtml-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  font-size: 2.2rem;
+ -khtml-user-select: none;
+ -webkit-user-select: none;
+ -ms-user-select: none;
+ user-select: none;
 }
+
 
 @-webkit-keyframes vibrate-1 {
   0% {
     -webkit-transform: translate(0);
-    transform: translate(0);
+            transform: translate(0);
   }
   20% {
     -webkit-transform: translate(-2px, 2px);
-    transform: translate(-2px, 2px);
+            transform: translate(-2px, 2px);
   }
   40% {
     -webkit-transform: translate(-2px, -2px);
-    transform: translate(-2px, -2px);
+            transform: translate(-2px, -2px);
   }
   60% {
     -webkit-transform: translate(2px, 2px);
-    transform: translate(2px, 2px);
+            transform: translate(2px, 2px);
   }
   80% {
     -webkit-transform: translate(2px, -2px);
-    transform: translate(2px, -2px);
+            transform: translate(2px, -2px);
   }
   100% {
     -webkit-transform: translate(0);
-    transform: translate(0);
+            transform: translate(0);
   }
 }
 @keyframes vibrate-1 {
   0% {
     -webkit-transform: translate(0);
-    transform: translate(0);
+            transform: translate(0);
   }
   20% {
     -webkit-transform: translate(-2px, 2px);
-    transform: translate(-2px, 2px);
+            transform: translate(-2px, 2px);
   }
   40% {
     -webkit-transform: translate(-2px, -2px);
-    transform: translate(-2px, -2px);
+            transform: translate(-2px, -2px);
   }
   60% {
     -webkit-transform: translate(2px, 2px);
-    transform: translate(2px, 2px);
+            transform: translate(2px, 2px);
   }
   80% {
     -webkit-transform: translate(2px, -2px);
-    transform: translate(2px, -2px);
+            transform: translate(2px, -2px);
   }
   100% {
     -webkit-transform: translate(0);
-    transform: translate(0);
+            transform: translate(0);
   }
 }
 
 @-webkit-keyframes heartbeat {
   from {
     -webkit-transform: scale(1);
-    transform: scale(1);
+            transform: scale(1);
     -webkit-transform-origin: center center;
-    transform-origin: center center;
+            transform-origin: center center;
     -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
   }
   10% {
     -webkit-transform: scale(0.91);
-    transform: scale(0.91);
+            transform: scale(0.91);
     -webkit-animation-timing-function: ease-in;
-    animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
   }
   17% {
     -webkit-transform: scale(0.98);
-    transform: scale(0.98);
+            transform: scale(0.98);
     -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
   }
   33% {
     -webkit-transform: scale(0.87);
-    transform: scale(0.87);
+            transform: scale(0.87);
     -webkit-animation-timing-function: ease-in;
-    animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
   }
   45% {
     -webkit-transform: scale(1);
-    transform: scale(1);
+            transform: scale(1);
     -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
   }
 }
 @keyframes heartbeat {
   from {
     -webkit-transform: scale(1);
-    transform: scale(1);
+            transform: scale(1);
     -webkit-transform-origin: center center;
-    transform-origin: center center;
+            transform-origin: center center;
     -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
   }
   10% {
     -webkit-transform: scale(0.91);
-    transform: scale(0.91);
+            transform: scale(0.91);
     -webkit-animation-timing-function: ease-in;
-    animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
   }
   17% {
     -webkit-transform: scale(0.98);
-    transform: scale(0.98);
+            transform: scale(0.98);
     -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
   }
   33% {
     -webkit-transform: scale(0.87);
-    transform: scale(0.87);
+            transform: scale(0.87);
     -webkit-animation-timing-function: ease-in;
-    animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
   }
   45% {
     -webkit-transform: scale(1);
-    transform: scale(1);
+            transform: scale(1);
     -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
   }
 }
 
 @-webkit-keyframes jello-vertical {
   0% {
     -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
+            transform: scale3d(1, 1, 1);
   }
   30% {
     -webkit-transform: scale3d(0.75, 1.25, 1);
-    transform: scale3d(0.75, 1.25, 1);
+            transform: scale3d(0.75, 1.25, 1);
   }
   40% {
     -webkit-transform: scale3d(1.25, 0.75, 1);
-    transform: scale3d(1.25, 0.75, 1);
+            transform: scale3d(1.25, 0.75, 1);
   }
   50% {
     -webkit-transform: scale3d(0.85, 1.15, 1);
-    transform: scale3d(0.85, 1.15, 1);
+            transform: scale3d(0.85, 1.15, 1);
   }
   65% {
     -webkit-transform: scale3d(1.05, 0.95, 1);
-    transform: scale3d(1.05, 0.95, 1);
+            transform: scale3d(1.05, 0.95, 1);
   }
   75% {
     -webkit-transform: scale3d(0.95, 1.05, 1);
-    transform: scale3d(0.95, 1.05, 1);
+            transform: scale3d(0.95, 1.05, 1);
   }
   100% {
     -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
+            transform: scale3d(1, 1, 1);
   }
 }
 @keyframes jello-vertical {
   0% {
     -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
+            transform: scale3d(1, 1, 1);
   }
   30% {
     -webkit-transform: scale3d(0.75, 1.25, 1);
-    transform: scale3d(0.75, 1.25, 1);
+            transform: scale3d(0.75, 1.25, 1);
   }
   40% {
     -webkit-transform: scale3d(1.25, 0.75, 1);
-    transform: scale3d(1.25, 0.75, 1);
+            transform: scale3d(1.25, 0.75, 1);
   }
   50% {
     -webkit-transform: scale3d(0.85, 1.15, 1);
-    transform: scale3d(0.85, 1.15, 1);
+            transform: scale3d(0.85, 1.15, 1);
   }
   65% {
     -webkit-transform: scale3d(1.05, 0.95, 1);
-    transform: scale3d(1.05, 0.95, 1);
+            transform: scale3d(1.05, 0.95, 1);
   }
   75% {
     -webkit-transform: scale3d(0.95, 1.05, 1);
-    transform: scale3d(0.95, 1.05, 1);
+            transform: scale3d(0.95, 1.05, 1);
   }
   100% {
     -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
-  }
-}
-@media screen and (max-width: 1215px) {
-  #toggler1 {
-    width: 5rem;
-    height: 5rem;
-    font-size: 80%;
-    display: flex;
+            transform: scale3d(1, 1, 1);
   }
 }
 
-@media screen and (max-width: 768px) {
-  .textParty {
-    font-size: 1rem;
-  }
+@media screen and (max-width: 500px) {
+      .textParty {
+              font-size: 1rem;
+      }
 }
